force-app/main/default/objects/Printer__c/fields/Darkness__c.field-meta.xml
<CustomField>
    <fullName>Darkness__c</fullName>
    <label>Darkness</label>
    <description>ZPL print darkness (^MD command). Range 0-30. Higher = darker. Leave blank to use printer default or auto-detect from printer.</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>