force-app/main/default/objects/Printer__c/fields/DPI__c.field-meta.xml
<CustomField>
    <fullName>DPI__c</fullName>
    <label>DPI</label>
    <description>Printer DPI (dots per inch). Used by the server to compute dot values for ZPL setup. Common values: 203, 300, 600. Leave blank to let the server auto-detect via SGD query.</description>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>