force-app/main/default/objects/Printer__c/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <label>Enabled</label>
    <description>Whether this printer is active. Use in Flow conditions to prevent sending jobs to disabled printers.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>