force-app/main/default/objects/Printer__c/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <label>Host</label>
    <description>IP address or hostname of the printer. Sent directly in the platform event.</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>