force-app/main/default/objects/Printer__c/fields/Label_Height_mm__c.field-meta.xml
<CustomField>
    <fullName>Label_Height_mm__c</fullName>
    <label>Label Height (mm)</label>
    <description>Physical label height in millimetres. e.g. 152.4 for 6 inch. Converted to dots (height_mm / 25.4 * DPI) for the ZPL ^LL command. Leave blank to auto-detect.</description>
    <type>Number</type>
    <precision>6</precision>
    <scale>2</scale>
</CustomField>