force-app/main/default/objects/Printer__c/fields/Port__c.field-meta.xml
<CustomField>
    <fullName>Port__c</fullName>
    <label>Port</label>
    <description>TCP port. Defaults to 9100 for ZPL/RAW. Use 631 for CUPS/IPP.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>9100</defaultValue>
</CustomField>