force-app/main/default/objects/Printer__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <description>Printer driver type. Valid values: zpl | raw | cups | ipp</description>
    <type>Text</type>
    <length>10</length>
    <required>true</required>
</CustomField>