force-app/main/default/objects/Printer__c/fields/ZPL_Prefix__c.field-meta.xml
<CustomField>
    <fullName>ZPL_Prefix__c</fullName>
    <label>ZPL Prefix</label>
    <description>Optional raw ZPL commands to prepend before every label. Injected inside the setup ^XA...^XZ block that the server sends before the label payload. e.g. ^MMT^MNM for media/rewind settings.</description>
    <type>LongTextArea</type>
    <length>4096</length>
</CustomField>